# Paraconsistent-Lib

./: .gitignore  README.md  index.html  main.py  planilha_info.txt  pyproject.toml  test_excel_validation.py  test_modifications.py  test_results.txt
paraconsistent.egg-info/: PKG-INFO
src/mrn/: __init__.py
src/mrn/blocks/: paraconsistent_block.py
src/mrn/builders/: __init__.py  base_node_builder.py  input_node_builder.py  logic_node_builder.py  output_node_builder.py
src/mrn/calculations/: average_aggregation_simple_paraconsistent_calculation.py  paraconsistent_classifier_calculation.py  paraconsistent_signal_parser_calculation.py  rule_based_classifier_calculation.py  simple_to_complete_paraconsistent_calculation.py  threshold_classifier_calculation.py
src/mrn/core/: __init__.py  block_base.py  graph.py  icalculation.py  iclassifier_calculation.py  inetwork_node.py  ioperation.py  isignal.py  network_manager.py
src/mrn/examples/: demo_wiring.py
src/mrn/nodes/: __init__.py  input_node.py  logic_node.py  output_node.py  wiring_node.py
src/mrn/operations/: calculate_each_signal_operation.py  classifier_operation.py  get_last_signal_operation.py  identity_operation.py  multi_input_formula_operation.py  none_operation.py  paraconsistent_parser_operation.py  result_each_signal_operation.py  unique_result_all_signal_operation.py
src/mrn/paraconsistent/: block.py
src/mrn/presets/: __init__.py  get_last_signal_logic_node.py  paraconsistent_aggregator_logic_node.py  (+2 more)
src/paraconsistent.egg-info/: PKG-INFO
tests/: test_pipeline.py
(+10 files in other folders)
