[project]
name = "mrn"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Oliveira",email = "diego263526352635@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "graphviz (>=0.21,<0.22)"
]

[tool.poetry]
packages = [{include = "mrn", from = "src"}]


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
